@@ -653,8 +653,8 @@ public class ResourcePool {
             }
             disableStoreInfoIfNeeded(info, DataStoreInfo.class, e);
 
-            if (e instanceof IOException) {
-                throw (IOException) e;
+            if (e instanceof IOException exception) {
+                throw exception;
             } else {
                 throw (IOException) new IOException().initCause(e);
             }
@@ -749,9 +749,8 @@ public class ResourcePool {
         } catch (IOException e) {
             LOGGER.log(
                     Level.INFO,
-                    String.format(
-                            "Failed to create the store using the configured factory (%s), will try a generic lookup now.",
-                            factory.getClass()),
+                    "Failed to create the store using the configured factory (%s), will try a generic lookup now."
+                            .formatted(factory.getClass()),
                     e);
             dataStore = DataStoreUtils.getDataAccess(connectionParameters);
         }
@@ -812,8 +811,7 @@ public class ResourcePool {
             // TODO: this code is a pretty big hack, using the name to
             // determine if the key is a url, could be named something else
             // and still be a url
-            if ((key != null) && key.matches(".* *url") && value instanceof String) {
-                String path = (String) value;
+            if ((key != null) && key.matches(".* *url") && value instanceof String path) {
 
                 if (path.startsWith("file:")) {
                     File fixedPath =
@@ -821,15 +819,13 @@ public class ResourcePool {
                     URL url = URLs.fileToUrl(fixedPath);
                     entry.setValue((V) url.toExternalForm());
                 }
-            } else if (value instanceof URL && ((URL) value).getProtocol().equals("file")) {
-                URL url = (URL) value;
+            } else if (value instanceof URL url && url.getProtocol().equals("file")) {
                 File fixedPath = Resources.find(
                         Resources.fromURL(Files.asResource(loader.getBaseDirectory()), url.toString()), true);
                 entry.setValue((V) URLs.fileToUrl(fixedPath));
             } else if ((key != null)
                     && (key.equals("directory") || key.equals("database") || key.equals("file"))
-                    && value instanceof String) {
-                String path = (String) value;
+                    && value instanceof String path) {
                 // if a url is used for a directory (for example property store), convert it to path
 
                 if (path.startsWith("file:")) {
@@ -1148,11 +1144,9 @@ public class ResourcePool {
             // configured attribute customization, execute before projection handling and callbacks
             if (info.getAttributes() != null && !info.getAttributes().isEmpty())
                 ft = transformer.retypeFeatureType(info, ft);
-
-            SimpleFeatureType sft = (SimpleFeatureType) ft;
             // create the feature type so it lines up with the "declared" schema
             SimpleFeatureTypeBuilder tb = new SimpleFeatureTypeBuilder();
-            tb.init(sft);
+            tb.init((SimpleFeatureType) ft);
             // Handle any aliases defined in info
             tb.setName(info.getName());
             tb.setNamespaceURI(info.getNamespace().getURI());
@@ -1200,7 +1194,7 @@ public class ResourcePool {
         // dirty?
         if (Proxy.isProxyClass(info.getClass())) {
             Object invocationHandler = Proxy.getInvocationHandler(info);
-            if (invocationHandler instanceof ModificationProxy && ((ModificationProxy) invocationHandler).isDirty()) {
+            if (invocationHandler instanceof ModificationProxy proxy && proxy.isDirty()) {
                 return false;
             }
         }
@@ -1215,8 +1209,7 @@ public class ResourcePool {
 
         // force the user specified CRS if the data has no CRS, or reproject it
         // if necessary
-        if (ad instanceof GeometryDescriptor) {
-            GeometryDescriptor old = (GeometryDescriptor) ad;
+        if (ad instanceof GeometryDescriptor old) {
             try {
                 // if old has no crs, change the projection handlign policy
                 // to be the declared
@@ -1270,8 +1263,7 @@ public class ResourcePool {
         FeatureType featureType = getFeatureType(ftInfo);
         if (featureType != null) {
             for (PropertyDescriptor pd : featureType.getDescriptors()) {
-                if (pd instanceof AttributeDescriptor) {
-                    AttributeDescriptor ad = (AttributeDescriptor) pd;
+                if (pd instanceof AttributeDescriptor ad) {
                     if (atInfo.getName().equals(ad.getLocalName())) {
                         return ad;
                     }
@@ -1464,7 +1456,7 @@ public class ResourcePool {
         } catch (Exception exception) {
             LOGGER.log(
                     Level.FINE,
-                    String.format("Error retrieving feature type using published name '%s'.", info.getQualifiedName()));
+                    "Error retrieving feature type using published name '%s'.".formatted(info.getQualifiedName()));
             // let's try now to search based on the native name
             featureSource = dataAccess.getFeatureSource(info.getQualifiedNativeName());
         }
@@ -1973,6 +1965,7 @@ public class ResourcePool {
         return entityResolver;
     }
 
+    @SuppressWarnings("PMD.CloseResource") // mtClient
     private HTTPClient getHTTPClient(HTTPStoreInfo info) {
         String capabilitiesURL = info.getCapabilitiesURL();
 
@@ -1987,10 +1980,8 @@ public class ResourcePool {
         HTTPClient client;
         if (info.isUseConnectionPooling()) {
             client = HTTPClientFinder.createClient(HTTPConnectionPooling.class);
-            if (info.getMaxConnections() > 0 && client instanceof HTTPConnectionPooling) {
+            if (info.getMaxConnections() > 0 && client instanceof HTTPConnectionPooling mtClient) {
                 int maxConnections = info.getMaxConnections();
-                @SuppressWarnings("PMD.CloseResource") // wrapped and returned
-                HTTPConnectionPooling mtClient = (HTTPConnectionPooling) client;
                 mtClient.setMaxConnections(maxConnections);
             }
         } else {
@@ -2509,14 +2500,10 @@ public class ResourcePool {
     static class WMSCache extends CatalogResourceCache<String, WebMapServer> {
 
         @Override
+        @SuppressWarnings("PMD.CloseResource") // closeable
         protected void dispose(String key, WebMapServer server) {
             HTTPClient client = server.getHTTPClient();
-            if (client instanceof Closeable) {
-                // dispose the client, and the connection pool hosted into it as a consequence
-                // the connection pool additionally holds a few threads that are also getting
-                // disposed with this call
-                @SuppressWarnings("PMD.CloseResource") // actually closing here
-                Closeable closeable = (Closeable) client;
+            if (client instanceof Closeable closeable) {
                 try {
                     closeable.close();
                 } catch (IOException e) {
@@ -2529,14 +2516,10 @@ public class ResourcePool {
     static class WMTSCache extends CatalogResourceCache<String, WebMapTileServer> {
 
         @Override
+        @SuppressWarnings("PMD.CloseResource") // closeable
         protected void dispose(String key, WebMapTileServer server) {
             HTTPClient client = server.getHTTPClient();
-            if (client instanceof Closeable) {
-                // dispose the client, and the connection pool hosted into it as a consequence
-                // the connection pool additionally holds a few threads that are also getting
-                // disposed with this call
-                @SuppressWarnings("PMD.CloseResource") // actually closing here
-                Closeable closeable = (Closeable) client;
+            if (client instanceof Closeable closeable) {
                 try {
                     closeable.close();
                 } catch (IOException e) {
@@ -2692,8 +2675,7 @@ public class ResourcePool {
             });
             clear(ds);
         } else {
-            if (dataStore instanceof ContentDataStore) {
-                ContentDataStore contentDataStore = (ContentDataStore) dataStore;
+            if (dataStore instanceof ContentDataStore contentDataStore) {
                 try {
                     // ask ContentDataStore to forget cached column information
                     String nativeName = ft.getNativeName();
@@ -2730,8 +2712,8 @@ public class ResourcePool {
         DataStoreInfo target;
         try {
             target = SerializationUtils.clone(source);
-            if (target instanceof StoreInfoImpl && target.getCatalog() == null) {
-                ((StoreInfoImpl) target).setCatalog(catalog);
+            if (target instanceof StoreInfoImpl impl && target.getCatalog() == null) {
+                impl.setCatalog(catalog);
             }
         } catch (Exception e) {
             target = catalog.getFactory().createDataStore();
@@ -2775,8 +2757,8 @@ public class ResourcePool {
         CoverageStoreInfo target;
         try {
             target = SerializationUtils.clone(source);
-            if (target instanceof StoreInfoImpl && target.getCatalog() == null) {
-                ((StoreInfoImpl) target).setCatalog(catalog);
+            if (target instanceof StoreInfoImpl impl && target.getCatalog() == null) {
+                impl.setCatalog(catalog);
             }
         } catch (Exception e) {
             target = catalog.getFactory().createCoverageStore();
@@ -2824,8 +2806,8 @@ public class ResourcePool {
         WMSStoreInfo target;
         try {
             target = SerializationUtils.clone(source);
-            if (target instanceof StoreInfoImpl && target.getCatalog() == null) {
-                ((StoreInfoImpl) target).setCatalog(catalog);
+            if (target instanceof StoreInfoImpl impl && target.getCatalog() == null) {
+                impl.setCatalog(catalog);
             }
         } catch (Exception e) {
             target = catalog.getFactory().createWebMapServer();
@@ -2856,8 +2838,8 @@ public class ResourcePool {
         WMTSStoreInfo target;
         try {
             target = SerializationUtils.clone(source);
-            if (target instanceof StoreInfoImpl && target.getCatalog() == null) {
-                ((StoreInfoImpl) target).setCatalog(catalog);
+            if (target instanceof StoreInfoImpl impl && target.getCatalog() == null) {
+                impl.setCatalog(catalog);
             }
         } catch (Exception e) {
             target = catalog.getFactory().createWebMapTileServer();
