@@ -4,7 +4,6 @@
  */
 package org.geoserver.config.datadir;
 
-import static java.lang.String.format;
 import static org.geoserver.config.datadir.DataDirectoryGeoServerLoader.GEOSERVER_DATA_DIR_LOADER_THREADS;
 
 import java.util.concurrent.ForkJoinPool;
@@ -73,7 +72,7 @@ class ExecutorFactory {
         return pool -> {
             SecurityContextHolder.getContext().setAuthentication(admin);
             ForkJoinWorkerThread worker = ForkJoinPool.defaultForkJoinWorkerThreadFactory.newThread(pool);
-            worker.setName(String.format("DatadirLoader-%d-worker-%d", poolIndex, threadIndex.incrementAndGet()));
+            worker.setName("DatadirLoader-%d-worker-%d".formatted(poolIndex, threadIndex.incrementAndGet()));
             return worker;
         };
     }
@@ -81,7 +80,7 @@ class ExecutorFactory {
     /** Exception handler to properly log unhandled exceptions in worker threads. */
     private static void uncaughtExceptionHandler(Thread t, Throwable ex) {
         String msg =
-                format("Uncaught exception loading catalog or config at thread %s: %s", t.getName(), ex.getMessage());
+                "Uncaught exception loading catalog or config at thread %s: %s".formatted(t.getName(), ex.getMessage());
         LOGGER.log(Level.SEVERE, msg, ex);
     }
 
@@ -113,18 +112,18 @@ class ExecutorFactory {
             }
             if (parseFail || parallelism < 1) {
                 parallelism = defParallelism;
-                LOGGER.log(
-                        Level.WARNING,
-                        () -> String.format(
-                                "Configured parallelism is invalid: %s=%s, using default of %d",
-                                GEOSERVER_DATA_DIR_LOADER_THREADS, configuredParallelism, defParallelism));
+                LOGGER.log(Level.WARNING, () -> "Configured parallelism is invalid: %s=%s, using default of %d"
+                        .formatted(GEOSERVER_DATA_DIR_LOADER_THREADS, configuredParallelism, defParallelism));
             } else if (parallelism > processors) {
                 parallelism = processors;
                 LOGGER.log(
                         Level.WARNING,
-                        () -> String.format(
-                                "Configured parallelism is invalid: %s=%s, using maximum of %d as per available processors",
-                                GEOSERVER_DATA_DIR_LOADER_THREADS, configuredParallelism, defParallelism));
+                        () ->
+                                "Configured parallelism is invalid: %s=%s, using maximum of %d as per available processors"
+                                        .formatted(
+                                                GEOSERVER_DATA_DIR_LOADER_THREADS,
+                                                configuredParallelism,
+                                                defParallelism));
             } else {
                 logTailMessage = "as indicated by the " + GEOSERVER_DATA_DIR_LOADER_THREADS
                         + " environment variable or System property";
