@@ -20,7 +20,7 @@ import java.io.FileWriter;
 import java.io.PrintWriter;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Locale;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
@@ -87,7 +87,7 @@ public class LoggingStartupContextListenerTest {
                 PrintWriter writer = new PrintWriter(buffered)) {
             writer.println("# Hello World");
         }
-        try (Stream<String> stream = Files.lines(Paths.get(DEFAULT_LOGGING_FILE.getPath()))) {
+        try (Stream<String> stream = Files.lines(Path.of(DEFAULT_LOGGING_FILE.getPath()))) {
             boolean found = stream.anyMatch(lines -> lines.contains("# Hello World"));
             assertTrue("default logging customized", found);
         }
@@ -102,7 +102,7 @@ public class LoggingStartupContextListenerTest {
             LoggingUtils.updateBuiltInLoggingProfiles = false;
         }
 
-        try (Stream<String> stream = Files.lines(Paths.get(DEFAULT_LOGGING_FILE.getPath()))) {
+        try (Stream<String> stream = Files.lines(Path.of(DEFAULT_LOGGING_FILE.getPath()))) {
             boolean found = stream.anyMatch(lines -> lines.contains("# Hello World"));
             assertFalse("default logging customized", found);
         }
@@ -280,7 +280,7 @@ public class LoggingStartupContextListenerTest {
                 PrintWriter writer = new PrintWriter(buffered)) {
             writer.println("# Hello World");
         }
-        try (Stream<String> stream = Files.lines(Paths.get(DEFAULT_LOGGING_FILE.getPath()))) {
+        try (Stream<String> stream = Files.lines(Path.of(DEFAULT_LOGGING_FILE.getPath()))) {
             boolean found = stream.anyMatch(lines -> lines.contains("# Hello World"));
             assertTrue("default logging customized", found);
         }
